# AlfaKids

./: .env.env  .gitignore  Dockerfile  app.py  compose.yaml  config.py  db.py  docker-compose.yml  migrate.py  pyproject.toml  requirements.txt  run.py  settings.toml
instance/: database.db
migrations/versions/: 116a815744e0_initial_migration.py  3e664d5c7d19_students_answers_table_creation.py  41097fef24a1_initial_migration.py  4a31abf53647_students_accomplishments_table_creation.py  53a3d2dde5fa_initial_migration.py  5b1e24f10bf5_initial_migration.py  640607677e70_initial_migration.py  644b5c3a6e06_subject_column_adjustment.py  93d03fe9b3f5_initial_migrate.py  c56ed07933c3_students_answers_adjustment.py  da56d91e6812_discursive_question_table_adjustment.py  f557f38bdeea_table_name_adjusment.py
models/accountable/: accountable.py
models/activity/: activity.py  activity_discursive.py  activity_objective.py  activity_response_dto.py  activity_status.py  discursive.py  objective.py
models/client/: client.py  (+2 more)
services/: accountable_service.py  activity_service.py  auth_service.py  chatbot_service.py  classroom_service.py  email_service.py  professor_service.py  question_service.py  student_accomplishment_service.py  student_answer_service.py  student_service.py  subject_service.py
src/: __init__.py  config.py
views/: accountable_view.py  activity_view.py  auth_view.py  chatbot_view.py  classroom_view.py  client_view.py  email_view.py  professor_view.py  question_view.py  student_accomplishment_view.py  student_answer_view.py  student_view.py  subject_view.py
(+51 files in other folders)
